# Intro-to-Data-Science

./: .gitignore
Homework/HW01/: Analysis_Patrom.txt  cheerygloomy.sh  count.txt  lines.txt  refinedText.txt  simpleAnalysis.txt  text.txt
Homework/HW01/old/: backup.sh  cheer.txt  grim.txt  results.txt  stories.txt
Homework/HW02/: pyproject.toml
Homework/HW02/hw02/: winequality_assignment1.ipynb  winequality_assignment1.py
Homework/HW03/: .Rhistory  OliveOil-R.Rmd  OliveOil-R.html  OliveOil.html  OliveOil.nb.html
Homework/HW03-Python/: pyproject.toml
Homework/HW03-Python/hw03python/: oliveOilAnalysis.ipynb
Homework/HW04/: analysis-TP.ipynb  corrected_data-TP.csv  pyproject.toml
Homework/HW05/: pyproject.toml  simple_model_with_images.ipynb
Homework/HW05/cats_vs_bats/: dataset_info_gray.csv
Homework/HW05/cats_vs_bats/bats_color/: meta.json
Homework/HW05/cats_vs_bats/bats_gray/: readme.txt
Homework/HW05/cats_vs_bats/cats_color/: readme.txt
Homework/HW05/cats_vs_bats/cats_gray/: readme.txt
Homework/HW06/: decision-trees.ipynb  pyproject.toml
Project/Data/: preprocessed_vgsales.csv  vgsales.csv
Project/Files/: EthicsReport-Patrom.docx  Poster-Patrom.pptx  ProjectPaper-Patrom.docx  Proposal1 - Patrom.docx  Proposal2 - Patrom.docx  ~$Word.docx
Project/src/: eda.ipynb  linear_1.ipynb  linear_2.ipynb  linear_3.ipynb  pyproject.toml  randomForest.ipynb  randomForest_NASales.ipynb
Project/src/For Fun/: gbdt.ipynb
