[tool.poetry]
name = "hw04"
version = "0.1.0"
description = "Homework 4 Data Science"
authors = ["Tanner Patrom"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
