[tool.poetry]
name = "hw06"
version = "0.1.0"
description = "Homework 6"
authors = ["Tanner Patrom <patromtanner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
ucimlrepo = "^0.0.6"
scikit-learn = "^1.4.1.post1"
certifi = "^2024.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
